Dependência do Laravel 8.0

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,7 @@
             "ThallisPHP\\LaravelZenviaNotification\\": "src/"
         }
     },
-    "require": {}
+    "require": {
+        "illuminate/support": "8.*"
+    }
 }
